Closed Bug 1189352 Opened 9 years ago Closed 9 years ago

NSPR_LOG_FILE=<absolute path> still not working from sandbox child process on Windows

Categories

(Core :: Security: Process Sandboxing, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1171796 +++

Realised that the last minute refactor I did before review for the patch for bug 1171796, meant that I broke the patch for absolute paths.

Before I was checking to see if it was an absolute path first, but I switched it around.

Unfortunately the validation for AppendRelativeNativePath, doesn't check very well for absolute paths and so you end up with something like: c:\foo\c:\bar\log.txt

Just need to switch the logic back to fix that ... and re-test it more thoroughly this time. :-)
Bug 1189352: Fix NSPR_LOG_FILE with absolute paths for sandboxed child on Windows. r?bbondy
Attachment #8641634 - Flags: review?(netzen)
Attachment #8641634 - Flags: review?(netzen) → review+
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/2bf9ce6c8403454172e5211c84da133c495e0e7b
changeset:  2bf9ce6c8403454172e5211c84da133c495e0e7b
user:       Bob Owen <bobowencode@gmail.com>
date:       Mon Aug 03 07:58:43 2015 +0100
description:
Bug 1189352: Fix NSPR_LOG_FILE with absolute paths for sandboxed child on Windows. r=bbondy
https://hg.mozilla.org/mozilla-central/rev/2bf9ce6c8403
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: